# prop-simulator

./: .gitignore  Cargo.toml  LICENSE  README.md  sample_trades.csv
src/: cli.rs  ftt_account.rs  lib.rs  main.rs  plotting.rs  trade_data.rs  trader.rs  web.rs
src/simulator/: ftt_account.rs  mod.rs  plotting.rs  trade_data.rs  trader.rs
src/simulator/prop_account/: account_type.rs  ftt_account.rs  mod.rs  topstep_account.rs
