[package]
name = "prop-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rand crate for random number generation and sampling from distributions
rand = "0.8"  # or the latest version

# Chrono crate for handling dates and times
chrono = { version = "0.4", features = ["serde"] }  # Chrono is used for parsing and manipulating dates

# CSV crate for reading and parsing CSV files
csv = "1.1"  # or the latest version

# Serde crate for serialization/deserialization (used by csv)
serde = { version = "1.0", features = ["derive"] }

rayon = "1.5"

anyhow = "1.0"

clap = { version = "4.0", features = ["derive"] }
